2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Components.Commands/KeyBindingService.cs: Track LoggingService
	  API changes.

2007-11-05  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components/BaseFileEntry.cs,
	  MonoDevelop.Components/FileEntry.cs: Add some copyright headers.
	* MonoDevelop.Components/FileSelector.cs: Set the default response button.
	  Fixes bug #337551.

2007-10-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.addin.xml: Bump MD version.

2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.mdp: Project file names updated by change in MD
	  path functions.

2007-10-12  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Components/FileSelector.cs: Applied changes that were
	  neccassary for to the new FileService.

2007-10-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Components.Commands.ExtensionNodes/ItemSetCodon.cs,
	  MonoDevelop.Components.Commands.ExtensionNodes/CommandCodon.cs: Changed
	  calls for the new StringParser.

2007-10-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.mdp: Fix warning level.

2007-09-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.addin.xml: Bump MD version.

2007-09-11  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Components.Commands.ExtensionNodes/ItemSetCodon.cs,
	  MonoDevelop.Components.Commands/CommandEntrySet.cs: Add an autohide
	  property to ItemSetCodon to set CommandEntrySet.AutoHide, and a FIXME
	  note because it doesn't have an effect yet!
	* MonoDevelop.Components.mdp: Updated.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Components.Commands/CommandManager.cs: Don't look for command
	  handlers in gtk# classes.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Components/FileSelector.cs,
	  MonoDevelop.Components.Commands/KeyBindingService.cs: Changes due to new
	  property system.
