@@ -1,3 +1,8 @@
+2007-11-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Components.Commands/CommandManager.cs: Make shortcuts work in
+	  detached windows. Fixes bug #325053.
+
 2007-11-09  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Components.Commands/KeyBindingService.cs: Track LoggingService
